--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ testApp.config(function($routeProvider, $locationProvider) {
 
     // route for the home page
     .when('/', {
-      templateUrl : 'home.html',
+      templateUrl : 'homepage.html',
       controller  : 'MainCtrl'
     })
     // route for the products page
