--- a/productspage.html
+++ b/productspage.html
@@ -3,7 +3,7 @@
 	<h1>Products Page</h1>
 
 	<p>{{ message }}</p>
-  <div class="row" ng-repeat="product in ProductsCtrl.products track by product.name">
+  <div class="row" ng-repeat="product in products track by product.name">
       <span class="col-xs-3 col-md-2">{{product.name}}</span>
       <span class="col-xs-3 col-md-2">{{product.price}}</span>
   </div>
